data/cloudformation_collected_templates_new/template_17469_lab1114.yml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2'
  EngName: 
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/jason.davis.labs/stelligent-u/lab11/name'
  EngMiddleName: 
      Type: String
      Default: ${{resolve:ssm-secure:/jason.davis.labs/stelligent-u/lab11/middle-name:1}}
  #   Type: 'AWS::SSM::Parameter::Value<String>'
  #   Default: '/jason.davis.labs/stelligent-u/lab11/middle-name'
  EngTeam: 
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/jason.davis.labs/stelligent-u/lab11/team'
  EngTimeZone: 
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/jason.davis.labs/stelligent-u/lab11/timezone'
  EngState: 
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/jason.davis.labs/stelligent-u/lab11/state'
  EngStartDate: 
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/jason.davis.labs/stelligent-u/lab11/start-date'
  
Resources:
  WebServerAsg:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      AutoScalingGroupName: 'AutomationBoxes'
      VPCZoneIdentifier:
        - 'subnet-066fd9edd76366fba'
        - 'subnet-0151f253d93f3e204'
      DesiredCapacity: '3'
      HealthCheckType: 'ELB'
      HealthCheckGracePeriod: 30 
      LaunchConfigurationName: !Ref WebServersLC
      MaxSize: '3'
      MinSize: '3'
      TargetGroupARNs:
        - !Ref TargetGrp

  WebLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      IpAddressType: 'ipv4'
      Name: 'AutomationForThePeople'
      Scheme: 'internet-facing'
      SecurityGroups: 
        - !Ref WebSecurityGroup
      Subnets: 
        - 'subnet-066fd9edd76366fba'
        - 'subnet-0151f253d93f3e204'
      Type: 'application'

  HTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref TargetGrp
      LoadBalancerArn: !Ref WebLoadBalancer
      Port: 80
      Protocol: HTTP
    
  TargetGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: "/index.html"
      VpcId: 'vpc-07f517fcb7dfbad1b'
      TargetType: 'instance'
      Port: '80'
      Protocol: 'HTTP'

  WebServersLC:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      KeyName: "lab1113-su-jmd"
      ImageId: !Ref LatestAmiId
      InstanceType: 't2.micro'
      LaunchConfigurationName: 'SimpleWebServerLC'
      SecurityGroups:
        - !Ref WebSecurityGroup
      UserData: 
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash -xe

            yum install -y aws-cfn-bootstrap

            # Install the files and packages from the metadata
            /opt/aws/bin/cfn-init -v \
              --stack ${AWS::StackName} \
              --resource WebServersLC \
              --configsets All \
              --region ${AWS::Region}

            # Signal the status from cfn-init
            /opt/aws/bin/cfn-signal -e $? \
              --stack ${AWS::StackName} \
              --resource WebServersLC \
              --region ${AWS::Region}

    Metadata:
      'AWS::CloudFormation::Init':
        configSets:
          All:
            - ConfigureStelligentProject
        ConfigureStelligentProject:
          packages:
            yum:
              nginx: []
          files:
            /usr/share/nginx/html/index.html:
              content: !Sub '<p>${EngName} ${EngMiddleName} ${EngTeam} ${EngTimeZone} ${EngState} ${EngStartDate}</p>'
              mode: '000644'
              owner: root
              group: root
          services:
            sysvinit:
              nginx:
                enabled: 'true'
                ensureRunning: 'true'

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow ping and ssh
        VpcId: "vpc-07f517fcb7dfbad1b"
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
